--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     font-family: monospace;
     text-align: center;
-    margin-top: 100px;;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 a{
     color: brown;
