--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     font-family: monospace;
     text-align: center;
     margin-top: 100px;
+    background-color: black;
+    color: antiquewhite;
 }
 a{
     color: brown;
