--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     font-family: monospace;
     text-align: center;
     margin-top: 100px;
-    background-color: black;
+    margin-bottom: 100px;
     color: antiquewhite;
 }
 a{
