--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     text-align: center;
     margin-top: 100px;
     margin-bottom: 100px;
-    color: antiquewhite;
+    color: black;
 }
 a{
     color: brown;
